@@ -1,3 +1,13 @@
+2015-10-28  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* gnus-topic.el (gnus-topic-prepare-topic): Remove unused var `topic'.
+	(gnus-topic-remove-topic): Mark unused arg `hide'.
+	(gnus-tmp-header): Declare.
+	(gnus-topic-goto-missing-group): Remove unused var `entry'.
+	(gnus-topic-unmark-topic): Mark unused arg `dummy'.
+	(gnus-topic-copy-matching): Mark unused arg `copyp'.
+	Move initialization of `topic' into its declaration.
+
 2015-10-23  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* auth-source.el: Revert.
